mengubah codingan jenis kelamin dan edit

--- a/Tugas CRUD/Data Siswa.html
+++ b/Tugas CRUD/Data Siswa.html
@@ -28,11 +28,18 @@
           <input type="text" class="form-control" id="sh_ttl">
       </div>
 
-      <label for="jeniskelamin">Jenis Kelamin</label><br>
-        <select class="form-control" id="sh_jeniskelamin">
-          <option value="Laki-laki">Laki-laki</option>
-          <option value="Perempuan">Perempuan</option>
-        </select>
+      <div class="form-group">
+        <label>Jenis Kelamin</label><br>
+        <div class="form-check-inline">
+          <input type="radio" class="form-check-input" name="sh_jeniskelamin" id="sh_jeniskelamin" checked="">
+          <label>Laki-laki</label>
+        </div>
+
+        <div class="form-check-inline">
+          <input type="radio" class="form-check-input" name="sh_jeniskelamin" id="sh_jeniskelamin">
+          <label>Perempuan</label>
+        </div>
+      </div>
 
 
         <label for="kelas">Kelas</label><br>
