mengubah codingan jenis kelamin

--- a/Tugas CRUD/Data Siswa.html
+++ b/Tugas CRUD/Data Siswa.html
@@ -29,14 +29,14 @@
       </div>
 
       <div class="form-group">
-        <label>Jenis Kelamin</label><br>
+        <label for="jeniskelamin">Jenis Kelamin</label><br>
         <div class="form-check-inline">
-          <input type="radio" class="form-check-input" name="sh_jeniskelamin" id="sh_jeniskelamin" checked="">
+          <input type="radio" class="form-check-input" name= "radio1" id="sh_jeniskelamin" checked="">
           <label>Laki-laki</label>
         </div>
 
         <div class="form-check-inline">
-          <input type="radio" class="form-check-input" name="sh_jeniskelamin" id="sh_jeniskelamin">
+          <input type="radio" class="form-check-input" name= "radio1" id="sh_jeniskelamin">
           <label>Perempuan</label>
         </div>
       </div>
